--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav">
         <ul>
-            <li class="logo"><a href="#"><img src="logo.png" alt="Logo" style="height: 30px; width: auto;"></a></li>
+            <li class="logo"><img src="img/logo2.png" alt="Logo"></li>
             <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#galeri">GALERI</a></li>
