--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     
         <div class="footer">
             <p class="copy">
-                &copy Copyright 2024 by PrkHlyaa <a href="#">Rintan OJ</a>
+                &copy Copyright 2024 by  <a href="#">PrkHlyaa</a>
             </p>
         </div>
 
