update hamburger menu

--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
-<!DOCTYPE htm
+<!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Zahra Hilyatul Jannah</title>
     <link rel="stylesheet" href="css/style.css">
-
 </head>
+
 <body>
-    <div class="nav">
-        <ul>
-            <li class="logo"><img src="img/logo2.png" alt="Logo"></li>
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#galeri">GALERI</a></li>
-        </ul>
-    </div>
+    <header>
+        <nav>
+            <div class="logo">Zahra Hilyah</div>
+            <ul>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Galeri">Galery</a></li>
+                <li><a href="#">Berita</a></li>
+            </ul>
+            <div class="menu-toggle">
+                <input type="checkbox">
+                <span></span>
+                <span></span>
+                <span></span>   
+            </div>
+        </nav>
+    </header>
 
     <div class="container">
-        <div class="header" id="home">
+        <div class="header" id="Home">
             <h1><strong>ZAHRA HILYATUL JANNAH</strong></h1>
             <p class="animated">Halo! Nama saya Zahra Hilyatul Jannah. Saya adalah seorang mahasiswa baru di Jurusan Teknik Komputer dan Informatika. Dengan memilih untuk melanjutkan pendidikan di bidang teknik, saya memiliki ketertarikan khusus dalam pemrograman dan pengembangan perangkat lunak. Saya juga memiliki kemampuan dalam bekerja dalam tim dan komunikasi yang baik. Saya sangat antusias untuk terus melanjutkan perjalanan saya di dunia teknologi dan komputer.</p>
             <p class="animated"><em>Let's go guys!! Stop Wishing and Start Doing🙌</em></p>
-            <img src="img/cover.jpg" alt="Boyband" class="center">           
+            <img src="img/cover.jpg" alt="Boyband" class="special-image">           
         </div>
-        <div class="paragraf" id="about">
+        <div class="paragraf" id="About">
             <h2>PROFIL DIRI</h2>
             <hr>
             <h3>Nama: Zahra Hilyatul Jannah</h3>
@@ -43,41 +53,40 @@
             <div class="paragraf">
                 <h2>KEMAMPUAN TEKNIS</h2>
                 <hr>            
-                <img src="img/microsoft.png" alt="Boyband" class="center">           
+                <img src="img/microsoft.png" class="center">           
                 <h3>Menggunakan aplikasi office seperti word, spreadsheet, dan slide presentation</h3>
                 <h3>Menerapkan metode ilmiah dalam memecahkan masalah teknik informatika</h3>
                 <h3>Menyelesaikan soal-soal pemrograman yang menguji problem solving</h3>
                 <h3>Memiliki kemampuan dan kemauan belajar hal-hal baru</h3>
         </div>
+
         <div class="paragraf">
             <h2>HARAPAN SETELAH LULUS</h2>
             <hr>            
-            <img src="img/polban.png" alt="Boyband" class="center">           
+            <img src="img/polban.png" class="center">           
             <h3>Bekerja di bidang yang sesuai dengan ilmu dan keahlian yang dimiliki</h3>
             <h3>Mengembangkan keterampilan dan pengetahuan yang relevan dengan perkembangan zaman</h3>
         </div>
         <div class="paragraf">
             <h2>LESSON LEARN</h2>
             <hr>            
-            <img src="img/studyweb.png" alt="Boyband" class="center">           
+            <img src="img/studyweb.png" class="center">           
             <h3>Memahami konsep dan fungsi github sebagai platform untuk menyimpan, berbagi, dan mengelola kode secara online</h3>
             <h3>Mempelajari sintaks dan struktur HTML sebagai bahasa markup untuk membuat konten web</h3>
             <h3>Mempelajari sintaks dan struktur CSS sebagai bahasa style sheet untuk menambahkan gaya dan tampilan web</h3>
         </div>
-        <div class="content cf" id="galeri">
+        <div class="content cf" id="Galeri">
                 <h2>GALERY</h2>
                 <hr>
                 <div class="kiri">
-                    <img src="img/sertif.png">
+                    <img src="img/sertif.png" class="galeri">
                     <p></p>
                 </div>
-                <div class="kiri">
-                    <img src="img/cc.jpg">
+                <div class="kanan">
+                    <img src="img/cc.jpg"class="galeri">
                     <p></p>
                 </div>
-                <div class="kiri">
-                    <img src="img/upacara.jpg">
-                </div>
+                <div style="clear: both;"></div>
         </div>
         
         <div class="paragraf">
@@ -98,7 +107,7 @@
                 &copy Copyright 2024 by  <a href="#">PrkHlyaa</a>
             </p>
         </div>
-
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
