--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About">About</a></li>
                 <li><a href="#Galeri">Galery</a></li>
-                <li><a href="#">Berita</a></li>
+                <li><a href="berita.html">Berita</a></li>
             </ul>
             <div class="menu-toggle">
                 <input type="checkbox">
@@ -102,11 +102,11 @@
              style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     
-        <div class="footer">
-            <p class="copy">
-                &copy Copyright 2024 by  <a href="#">PrkHlyaa</a>
-            </p>
-        </div>
+    </div>
+    <div class="footer">
+        <p class="copy">
+            &copy Copyright 2024 by  <a href="#">PrkHlyaa</a>
+        </p>
     </div>
     <script src="js/main.js"></script>
 </body>
