--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         <div class="paragraf">
             <h2>VIDEO</h2>
             <hr>
-            <iframe width="70%" height=50%  src="https://www.youtube.com/embed/zRHzfyy829g?si=yDqzCPdiCfzp4SIv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>              
+            <iframe width="50%" height="300px" src="https://www.youtube.com/embed/zRHzfyy829g?si=yDqzCPdiCfzp4SIv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>              
         </div>
         
         <div class="paragraf">
             <h2>MAP</h2>
             <hr>
-            <iframe width="70%" height="50%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.1354878607744!2d107.57149497441924!3d-6.874365367261024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e427604e25e5%3A0x80582df3352976fd!2sJl.%20Villa%20Duta%20No.3%2C%20Ciwaruga%2C%20Kec.%20Parongpong%2C%20Kabupaten%20Bandung%20Barat%2C%20Jawa%20Barat%2040559!5e0!3m2!1sid!2sid!4v1709049863188!5m2!1sid!2sid" 
+            <iframe width="80%" height="300px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.1354878607744!2d107.57149497441924!3d-6.874365367261024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e427604e25e5%3A0x80582df3352976fd!2sJl.%20Villa%20Duta%20No.3%2C%20Ciwaruga%2C%20Kec.%20Parongpong%2C%20Kabupaten%20Bandung%20Barat%2C%20Jawa%20Barat%2040559!5e0!3m2!1sid!2sid!4v1709049863188!5m2!1sid!2sid" 
              style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     
