--- a/berita.html
+++ b/berita.html
@@ -34,7 +34,7 @@
             <thead>
                 <tr>
                     <th>Judul</th>
-                    <th class="align-center">Kategori</th>
+                    <th>Kategori</th>
                     <th>Waktu Publish</th>
                     <th>Waktu Scraping</th>
                 </tr>
