--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div class="header" id="Home">
             <h1><strong>ZAHRA HILYATUL JANNAH</strong></h1>
             <p class="animated">Halo! Nama saya Zahra Hilyatul Jannah. Saya adalah seorang mahasiswa baru di Jurusan Teknik Komputer dan Informatika. Dengan memilih untuk melanjutkan pendidikan di bidang teknik, saya memiliki ketertarikan khusus dalam pemrograman dan pengembangan perangkat lunak. Saya juga memiliki kemampuan dalam bekerja dalam tim dan komunikasi yang baik. Saya sangat antusias untuk terus melanjutkan perjalanan saya di dunia teknologi dan komputer.</p>
-            <p class="animated"><em>Let's go guys!! Stop Wishing and Start Doing🙌</em></p>       
+            <p class="animated"><em>Let's go guys!! Stop Wishing and Start Doing🙌</em></p>
+            <img src="img/cover.jpg" alt="Boyband" class="special-image">           
         </div>
         <div class="paragraf" id="About">
             <h2>PROFIL DIRI</h2>
