--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="social-links">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/hilyah19_/"><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/PrkHlyaa"><i class="fab fa-github"></i></a>
             </div>
             <p class="copy">
                 &copy; Copyright 2024 by <a href="#">PrkHlyaa</a>
